plugins {
    id "java"
    id "jacoco"
    id "org.springframework.boot" version "3.1.5"
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.sonarqube" version "4.4.1.3373"
    id "info.solidsoft.pitest" version "1.9.11"
    id "org.jsonschema2dataclass" version "6.0.0"
}

def versions = [
        pitest                       : "1.4.10",
        springdocVersion             : "2.1.0",
        liquibase                    : "4.20.0",
        crimeCommonsClassesVersion   : "3.18.0",
        crimeCommonsRestClientVersion: "3.4.0",
        crimeCommonsModsSchemas      : "0.7.0",
        mockitoInlineVersion         : "5.2.0",
        cucumberVersion              : "7.14.0",
        jUnitPlatformSuiteVersion    : "1.10.0",
        springCloudStubRunnerVersion : "4.0.4",
        h2DBVersion                  : '2.1.210',
        postgresqlVersion            : "42.7.2"

]


group = "uk.gov.justice.laa.crime"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}


repositories {
    mavenCentral()
}

dependencies {
    implementation "uk.gov.justice.service.laa-crime:crime-commons-spring-boot-starter-rest-client:$versions.crimeCommonsRestClientVersion:all"
    implementation "uk.gov.justice.service.laa-crime:crime-commons-classes:$versions.crimeCommonsClassesVersion"
    implementation "uk.gov.justice.service.laa-crime:crime-commons-mod-schemas:$versions.crimeCommonsModsSchemas"

    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"

    implementation "org.postgresql:postgresql:$versions.postgresqlVersion"
    implementation "io.micrometer:micrometer-registry-prometheus"
    implementation "org.liquibase:liquibase-core:$versions.liquibase"
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$versions.springdocVersion"

    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"

    testImplementation group: 'com.h2database', name: 'h2', version: versions.h2DBVersion
    testImplementation "org.mockito:mockito-inline:$versions.mockitoInlineVersion"
    testImplementation "org.pitest:pitest:$versions.pitest"
    testImplementation "org.springframework.security:spring-security-test"
    testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner:$versions.springCloudStubRunnerVersion"

    //  cucumber
    testImplementation platform("io.cucumber:cucumber-bom:$versions.cucumberVersion")
    testImplementation "io.cucumber:cucumber-java"
    testImplementation "io.cucumber:cucumber-spring"
    testImplementation "io.cucumber:cucumber-junit-platform-engine"
    testImplementation "org.junit.platform:junit-platform-suite:$versions.jUnitPlatformSuiteVersion"
}

configurations {
    all {
        exclude group: 'junit', module: 'junit'
    }
}

test {
    useJUnitPlatform()
    dependsOn "cleanTest"
    finalizedBy jacocoTestReport

}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it,
                    exclude: [
                            "**/entity/**",
                            "**/dto/**",
                            "**/config/**"
                    ])
        }))
    }

}

pitest {
    targetClasses = ["uk.gov.justice.laa.crime.meansassessment.service.*", "uk.gov.justice.laa.crime.meansassessment.controller.*", "uk.gov.justice.laa.crime.meansassessment.validation.*"]
    excludedClasses = ["uk.gov.justice.laa.crime.meansassessment.dto.*", "uk.gov.justice.laa.crime.meansassessment.mapper.*", "uk.gov.justice.laa.crime.meansassessment.CrimeMeansAssessmentApplication"]
    threads = 5
    outputFormats = ["XML", "HTML"]
    timestampedReports = false
    mutationThreshold = 60
}

tasks["sonar"].dependsOn test

sonar {
    properties {
        property "sonar.exclusions", "**/entity/**.java , **/model/**.java , **/dto/**.java , **/config/**.java, **/jms/**.java,**/exception/**.java,**/handler/**.java, **/**StoredProcedureRepository.java"
        property "sonar.coverage.exclusions", "**/CrimeMeansAssessmentApplication.java, , **/StatelessCucumberTest.java"
        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
        property "sonar.projectKey", "ministryofjustice_laa-crime-means-assessment"
        property "sonar.organization", "ministryofjustice"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.projectName", "Crime Apps :: crime-means-assessment"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"

    }
}

jsonSchema2Pojo {
    executions {
        main {
            methods.builders = true
            methods.buildersDynamic = true
            methods.annotateJsr303Jakarta = true
            fields.floatUseBigDecimal = true
            dateTime.dateTimeType = "java.time.LocalDateTime"
            klass.targetPackage = "uk.gov.justice.laa.crime.meansassessment.model.common"
            io.source.setFrom files("${project.rootDir}/src/main/resources/schemas")
        }
    }
}